# diplom8

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-ci.yaml  docker-compose.yaml  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: action.yaml
.run/: diplom8_34.run.xml
bot/: admin.py  models.py  serializers.py  urls.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_add_bot_models.py  0001_initial.py  0002_alter_tguser_options.py  0003_alter_tguser_user.py  0004_tg_username_username_models.py
bot/tg/: client.py  schemas.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_alter_goal_options_alter_goal_status_and_more.py  0002_goal_goalcomment.py  0003_board_goalcategory_board_boardparticipant.py  0004_create_new_objects.py  0005_alter_goalcategory_board.py  0006_alter_goalcomment_options_alter_goalcomment_user.py  0007_alter_goal_due_date.py
migrations/: 0001_initial.py
tests/: fixtures.py
tests/test_views/board/: test_create_board.py  test_delete_board.py  test_detail_board.py  test_list_board.py
tests/test_views/goal/: test_create_goal.py  test_delete_goal.py  test_detail_goal.py  test_list_goal.py  test_update_goal.py
tests/test_views/goal_category/: test_create_goal_cat.py  test_detail_goal_cat.py  test_list_goal_cat.py
tests/test_views/goal_comment/: test_create_goal_comment.py  test_delete_goal_comment.py  test_list_goal_comment.py
todolist/: settings.py  urls.py
