[tool.poetry]
name = "todolist"
version = "0.1.0"
description = "todolist start les33"
authors = ["MrLerich <mrlerich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
