[tool.poetry]
name = "todolist"
version = "0.1.0"
description = "todolist start les33"
authors = ["MrLerich <mrlerich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.5"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"
social-auth-app-django = "^5.0.0"
djangorestframework-jsonapi = "^6.0.0"
django-filter = "^22.1"
django-social-oauth-token = "^2.2.0"
marshmallow = "^3.19.0"
marshmallow-dataclass = "^8.5.11"
pydantic = "^1.10.4"
pytest-factoryboy = "^2.5.1"
pytest = "^7.2.1"
pytest-django = "^4.5.2"
factory-boy = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
